--- a/style.css
+++ b/style.css
@@ -104,20 +104,15 @@ button#generate-report:hover {
 }
 
 .tabla-container {
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    display: flex;
+    justify-content: space-between;
     gap: 30px;
     margin-bottom: 40px;
-    align-items: start;
 }
 
 .tabla-container table {
     border-collapse: collapse;
-    width: 100%;
-}
-
-#results-chart {
-    max-width: 400px;
+    width: 48%;
 }
 
 .tabla-container th,
